--- a/client/index.html
+++ b/client/index.html
@@ -40,7 +40,7 @@
 	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">listing</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-	          <li class="nav-item cta"><a href="login.html" class="nav-link"><span>login</span></a></li>
+	          <li class="nav-item cta" id="login"><a href="#" class="nav-link"><span>login</span></a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -363,7 +363,7 @@
 
 
   <script src="js/jquery.min.js"></script>
-  <script src="js/jquery-migrate-3.0.1.min.js"></script>
+  <!--script src="js/jquery-migrate-3.0.1.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/jquery.easing.1.3.js"></script>
@@ -378,7 +378,8 @@
   <script src="js/scrollax.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
   <script src="js/google-map.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/main.js"></script-->
+  <script src="js/config.js"></script>
     
   </body>
 </html>
