Created the property detail page

--- a/client/property.html
+++ b/client/property.html
@@ -64,19 +64,19 @@
         <div class="row">
           <div class="col-md-8 ftco-animate">
             <h2 class="mb-3">Property Detail</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, eius mollitia suscipit, quisquam doloremque distinctio perferendis et doloribus unde architecto optio laboriosam porro adipisci sapiente officiis nemo accusamus ad praesentium? Esse minima nisi et. Dolore perferendis, enim praesentium omnis, iste doloremque quia officia optio deserunt molestiae voluptates soluta architecto tempora.</p>
+            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, eius mollitia suscipit, quisquam doloremque distinctio perferendis et doloribus unde architecto optio laboriosam porro adipisci sapiente officiis nemo accusamus ad praesentium? Esse minima nisi et. Dolore perferendis, enim praesentium omnis, iste doloremque quia officia optio deserunt molestiae voluptates soluta architecto tempora.</p> -->
             <p>
-              <img src="images/image_6.jpg" alt="" class="img-fluid">
+              <img src="images/img_1.jpg" alt="" class="img-fluid" id="img-house">
             </p>
-            <p>Molestiae cupiditate inventore animi, maxime sapiente optio, illo est nemo veritatis repellat sunt doloribus nesciunt! Minima laborum magni reiciendis qui voluptate quisquam voluptatem soluta illo eum ullam incidunt rem assumenda eveniet eaque sequi deleniti tenetur dolore amet fugit perspiciatis ipsa, odit. Nesciunt dolor minima esse vero ut ea, repudiandae suscipit!</p>
+            <p id="description"></p>
             
             <div class="about-author d-flex p-5 bg-light">
               <div class="bio mr-5">
                 <img src="images/person_1.jpg" alt="Image placeholder" class="img-fluid mb-4 rounded-circle">
               </div>
               <div class="desc align-self-md-center">
-                <h3>Lance Smith</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus voluptate quod mollitia delectus aut, sunt placeat nam vero culpa sapiente consectetur similique, inventore eos fugit cupiditate numquam!</p>
+                <h3 id="agent"></h3>
+                <p>I am the agent who will take you to the home of your life!</p>
               </div>
             </div>
 
@@ -85,11 +85,13 @@
             <div class="sidebar-box ftco-animate">
               <div class="categories">
                 <h3>Features</h3>
-                <li><a href="#">Food <span>(12)</span></a></li>
-                <li><a href="#">Dish <span>(22)</span></a></li>
-                <li><a href="#">Desserts <span>(37)</span></a></li>
-                <li><a href="#">Drinks <span>(42)</span></a></li>
-                <li><a href="#">Ocassion <span>(14)</span></a></li>
+                <li><a href="#">Province <span id="province"></span></a></li>
+                <li><a href="#">City <span id="city"></span></a></li>
+                <li><a href="#">Year built <span id="year"></span></a></li>
+                <li><a href="#">Square feet <span id="square-feet"></span></a></li>
+                <li><a href="#">Bedrooms <span id="bedrooms"></span></a></li>
+                <li><a href="#">Bathrooms <span id="bathrooms"></span></a></li>                
+                <li><a href="#">Style <span id="style"></span></a></li>
               </div>
             </div>
 
