Created sign up user. Finished the project

--- a/client/create-property.html
+++ b/client/create-property.html
@@ -59,7 +59,7 @@
                                         <div class="input-group">
                                             <label class="label">Province</label>
                                             <div class="input-group-icon">
-                                                <input class="input--style-4 js-datepicker" type="text" id="province">
+                                                <input class="input--style-4" type="text" id="province">
                                                 <i class="zmdi zmdi-calendar-note input-icon js-btn-calendar"></i>
                                             </div>
                                         </div>
