--- a/client/listing.html
+++ b/client/listing.html
@@ -74,7 +74,7 @@
                       <option value="Calgary">Calgary</option>
                       <option value="Vancouver">Vancouver</option>
                       <option value="Burnaby">Burnaby</option>
-                      <option value="New Westminster">New Westminster</option>
+                      <option value="New West">New Westminster</option>
                     </select>
                   </div>
                 </div>
